All saved, some trashing to do ...

--- a/ImgUndistorter.ipynb
+++ b/ImgUndistorter.ipynb
@@ -56,14 +56,17 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
+    "'''\n",
+    "This function:\n",
+    "- loads camera params from *.xml (w, h, cam_m and d_coeff)\n",
+    "- reads a distorted image (generated with the corresponding camera)\n",
+    "- creates distortion maps\n",
+    "- maps distorted to distorted image\n",
     "\n",
+    "'''\n",
     "def undistort_and_show(camera_id):\n",
     "\n",
-    "\n",
-    "    # \n",
     "    # Reading parameters from *.xml\n",
-    "    #\n",
-    "\n",
     "    tree = ET.parse(\"calibration/cam\" + str(camera_id) + \".xml\")\n",
     "    root = tree.getroot()\n",
     "\n",
@@ -83,29 +86,20 @@
     "    cam_m = cam_m.astype(np.float64).reshape((3,3))\n",
     "    d_coeff = d_coeff.astype(np.float64)\n",
     "\n",
-    "    #\n",
     "    # Loading image\n",
-    "    #\n",
-    "\n",
     "    img = cv.imread(\"distorted_\" + str(camera_id) + \".png\")\n",
     "\n",
-    "    #\n",
     "    # Undistorting stuff ...\n",
-    "    #\n",
     "    newcameramtx, roi = cv.getOptimalNewCameraMatrix(cam_m, d_coeff, (h,w), 0, (h,w))\n",
     "    mapx, mapy = cv.initUndistortRectifyMap(cam_m, d_coeff, None, newcameramtx, (w,h), 5)\n",
     "    dst = cv.remap(img, mapx, mapy, cv.INTER_LINEAR)\n",
     "\n",
-    "    #\n",
     "    # Plotting Stuff\n",
-    "    #\n",
     "    fig, axs = plt.subplots(1,2, figsize=(16,8))\n",
     "    axs[0].axis('off')\n",
     "    axs[1].axis('off')\n",
     "    axs[0].imshow(img)\n",
     "    axs[1].imshow(dst)\n",
-    "    \n",
-    "\n",
     "    \n",
     "\n",
     "if __name__ == \"__main__\":\n",
