--- a/Visualizer.ipynb
+++ b/Visualizer.ipynb
@@ -196,7 +196,7 @@
     "                        ax.set_axis_off()\n",
     "                        fig.add_axes(ax)\n",
     "                        ax.imshow(np.transpose(screen), cmap=my_gradient, aspect='auto')\n",
-    "                        fig.savefig(\"distorted_\" + str(camera_id) + \".png\")\n",
+    "                        fig.savefig(\"images/distorted_\" + str(camera_id) + \".png\")\n",
     "                        plt.pause(1)\n",
     "                    image_counter += 1\n",
     "                    if image_counter >= image_of_interest:\n",
