Extra stuff used for aestream

--- a/ViewerSingle.ipynb
+++ b/ViewerSingle.ipynb
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a70b154d",
+   "id": "c9e3c1ca",
    "metadata": {},
    "outputs": [
     {
@@ -189,6 +189,50 @@
     "\n",
     "    elapsed = stop - start\n",
     "    print(\"Parser took: \" + str(int(elapsed)) + \" seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "335eba9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5,1,1,-1,-1\n",
+      "6,1,2,-1,-1\n",
+      "9,2,1,-1,-1\n",
+      "10,2,2,-1,-1\n",
+      "Total pixels used: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 4\n",
+    "d = ','\n",
+    "count = 0\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if i>0 and i < (N-1):\n",
+    "            if j>0 and j < (N-1):\n",
+    "                if i == 1 and (j > 1 and j < N-2):\n",
+    "                    print(f\"{i*N+j}{d}{i}{d}{j}{d}{i-1}{d}{j}\")\n",
+    "                    count += 1\n",
+    "                elif i == N-2 and (j > 1 and j < N-2):\n",
+    "                    print(f\"{i*N+j}{d}{i}{d}{j}{d}{i+1}{d}{j}\")\n",
+    "                    count += 1\n",
+    "                elif j == 1 and (i > 1 and i < N-2):\n",
+    "                    print(f\"{i*N+j}{d}{i}{d}{j}{d}{i}{d}{j-1}\")\n",
+    "                    count += 1\n",
+    "                elif j == N-2 and (i > 1 and i < N-2):\n",
+    "                    print(f\"{i*N+j}{d}{i}{d}{j}{d}{i}{d}{j+1}\")\n",
+    "                    count += 1\n",
+    "                else:                   \n",
+    "                    print(f\"{i*N+j}{d}{i}{d}{j}{d}{-1}{d}{-1}\")  \n",
+    "                    count += 1    \n",
+    "print(f\"Total pixels used: {count}\")"
    ]
   }
  ],
